# rust-tool

./: .gitignore  AGENTS.md  Cargo.toml  README.md  github_ops_guide.md  rt  rt.bat  start.bat
.agents/: 01_Rust工具站实施计划.md  02_VLESS转Mihomo转换模块实施计划.md  02_Windows工作台实施计划.md  03_工具箱导航与应用外壳实施计划.md  04_VLESS转Mihomo转换模块实施计划.md  04_接口文档BC组合导航实施计划.md  05_SQLite配置与任务记录模块实施计划.md  05_接口在线调试实施计划.md  06_Docker管理模块实施计划.md  06_桌面与Web一致性规范.md  07_AI安全文档模块优化实施计划.md  07_sub2api管理模块实施计划.md  08_AI安全档案系统长期治理实施计划.md  08_开发运行与打包脚本实施计划.md  09_SQLite说明文档.md  09_团队安全治理运营层实施计划.md  10_ClashParty管理API文档.md  11_操作日志模块说明.md
.agents/260617-osv-scanner/: implementation_plan.md  requirements_background.md  task_list.md
.agents/input/: 寿司云-示例.yml
.agents/tasks/260616_doc_parsing_arch/: architecture_design.md  implementation_plan.md  project_background.md  solution_proposal.md  task.md  walkthrough.md
.agents/tasks/260617_program_settings/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260619_agent_history_repository/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260619_sqlite_storage_foundation/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260620_database_maintenance/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260620_osv_latest_scan_storage/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260620_osv_projects_storage/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260621_agent_skills_three_column_layout/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260621_database_recovery_diagnostics/: code_audit_report.md  impact_analysis.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260622_dashboard_grouping/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260622_finalshell_password_decoder/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260622_github_actions_pnpm_builds/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260622_master_latest_release/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260622_version_0_1_1/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260623_agent_skills_sqlite_settings/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.agents/tasks/260623_platform_script_selection/: code_audit_report.md  implementation_plan.md  task.md  walkthrough.md
.github/workflows/: publish.yml
crates/rust_tool_cli/: Cargo.toml
crates/rust_tool_cli/src/: main.rs
crates/rust_tool_core/: Cargo.toml
crates/rust_tool_core/migrations/: 0001_storage_foundation.sql  0002_agent_execution_history.sql  0003_osv_latest_scan_results.sql  0004_osv_projects_and_command_history.sql
crates/rust_tool_core/src/: clash_party.rs  lib.rs  storage.rs  workbench.rs
crates/rust_tool_core/src/memo/: assets.rs  audit.rs  backup.rs  crypto.rs  governance.rs  history.rs  markdown_store.rs  mod.rs  redactor.rs  reports.rs  secret_vault.rs  standards.rs  store.rs  vector.rs
crates/rust_tool_core/src/tools/: finalshell_password.rs  mod.rs  osv_scanner.rs  vless_to_mihomo.rs
crates/rust_tool_server/: Cargo.toml
crates/rust_tool_server/src/: app.rs  main.rs  static_files.rs
crates/rust_tool_server/src/routes/: clash_party.rs  memo.rs  mod.rs  osv_scanner.rs  tools.rs  workbench.rs
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  apiDocs.ts  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  memo_commands.rs  workbench.rs
frontend/src/api/: agentSkillHistory.test.ts  agentSkillHistory.ts  agentSkillsSettings.test.ts  agentSkillsSettings.ts  download.ts  http.ts  osvScanner.test.ts  osvScanner.ts  programSettings.test.ts  programSettings.ts  tools.ts  workbench.ts
frontend/src/components/: AppSidebar.vue  ConfirmDialog.vue  CopyButton.vue  DownloadButton.vue  ResultPanel.vue  SecurePasswordInput.vue  SmartSelect.vue  ToolShell.vue
frontend/src/pages/: AgentSkills.vue  AiMemo.vue  ApiDocs.vue  ApiManagement.vue  Codex.vue  FinalShellPasswordDecoder.vue  OperationLogs.vue  OsvScanner.vue  ProgramSettings.vue  SecretVault.vue  Toolbox.vue  ToolboxDashboard.vue  VlessToMihomo.vue  WindowsWorkbench.vue
scripts/: build_desktop.bat  build_frontend.bat  build_release.bat  clean.bat  dev_all.bat  dev_desktop.bat  dev_frontend.bat  dev_server.bat  env.bat  install_frontend.bat  menu.ps1  run_release_server.bat  test_all.bat
tests/fixtures/: vless_grpc.txt  vless_reality.txt  vless_ws.txt
(+15 files in other folders)
