[workspace]
members = [
    "crates/rust_tool_core",
    "crates/rust_tool_server",
    "crates/rust_tool_cli",
    "frontend/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
http = "1"
mime_guess = "2"
md-5 = "0.10"
percent-encoding = "2"
rust_tool_core = { path = "crates/rust_tool_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tauri = "2.11.2"
tauri-build = "2.4.2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
toml_edit = "0.25"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
zeroize = "1"
