[package]
name = "rust_tool_core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
url.workspace = true
tokio.workspace = true
reqwest.workspace = true
keepass.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
zip.workspace = true
base64.workspace = true
uuid.workspace = true


[dev-dependencies]
serde_json.workspace = true
