[package]
name = "rust_tool_core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
md-5.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
percent-encoding.workspace = true
sqlx.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
url.workspace = true
tokio.workspace = true
reqwest.workspace = true
zeroize.workspace = true


[dev-dependencies]
serde_json.workspace = true
