[package]
name = "rust_tool_server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
http.workspace = true
mime_guess.workspace = true
rust_tool_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
